# final_assignment_ws

src/smart_car/: CMakeLists.txt  package.xml  setup.py
src/smart_car/config/: config.yaml  nav2_params.yaml
src/smart_car/launch/: localization.launch.py  nav2.launch.py  smartcar_visualize.launch.py
src/smart_car/models/: model.config
src/smart_car/rviz/: visualize.rviz
src/smart_car/smart_car/: joint_state_publisher.py  wheel_odom_publisher.py
src/smart_car/urdf/: smartcar.urdf  smartcar.urdf.xacro  test.urdf
src/smartcar_msgs/: CMakeLists.txt  package.xml
